# generative-ai-application-builder-on-aws

./: .cursorrules  .gitignore  .viperlightignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt
deployment/ecr/gaab-strands-common/: README.md  pyproject.toml  pytest.ini
deployment/ecr/gaab-strands-common/scripts/: run_unit_tests.sh
deployment/ecr/gaab-strands-common/src/gaab_strands_common/: __init__.py  base_agent.py  constants.py  ddb_helper.py  mcp_tools_loader.py  models.py  runtime_streaming.py  strands_tools_registry.py  tool_wrapper.py  tools_manager.py
deployment/ecr/gaab-strands-common/test/: README.md  __init__.py  conftest.py  pytest_plugin.py  test_base_agent.py  test_helpers.py  test_models.py  test_runtime_streaming.py  test_tool_wrapper.py
deployment/ecr/gaab-strands-common/test/custom_tools/: test_base_tool.py  test_decorators.py  test_metadata.py  test_registry.py  test_s3_file_reader.py
deployment/ecr/gaab-strands-common/test/multimodal/: test_file_handler.py  test_multimodal_processor.py
deployment/ecr/gaab-strands-common/test/utils/: test_helpers.py
deployment/ecr/gaab-strands-workflow-agent/: Dockerfile  README.md  pyproject.toml
deployment/ecr/gaab-strands-workflow-agent/scripts/: build-container.sh  deploy-ecr.sh  run_unit_tests.sh
deployment/ecr/gaab-strands-workflow-agent/src/: agents_loader.py  main.py  workflow_agent.py
deployment/ecr/gaab-strands-workflow-agent/test/: conftest.py  test_agentcore_integration.py  test_agents_loader.py  test_workflow_agent.py  test_workflow_agent_memory.py
source/infrastructure/test/mock-lambda-func/python-lambda/: function.py  pyproject.toml
source/lambda/agentcore-invocation/: handler.py  pyproject.toml
source/lambda/agentcore-invocation/test/: test_agentcore_client.py  test_event_processor.py  test_gone_exception_shortcircuit.py  test_handler_integration.py  test_helper.py  test_keep_alive_manager.py
source/lambda/agentcore-invocation/utils/: __init__.py  agentcore_client.py  constants.py  event_processor.py  helper.py  keep_alive_manager.py  websocket_error_handler.py  websocket_gone_exception.py
source/lambda/chat/: .coveragerc  .gitignore  anthropic_handler.py  bedrock_handler.py  huggingface_handler.py  pyproject.toml  requirements-dev.txt  sagemaker_handler.py
source/lambda/chat/clients/: anthropic_client.py  bedrock_client.py  huggingface_client.py  llm_chat_client.py  sagemaker_client.py
source/lambda/chat/clients/builders/: anthropic_builder.py  bedrock_builder.py  huggingface_builder.py  llm_builder.py  sagemaker_builder.py
source/lambda/chat/clients/factories/: conversation_memory_factory.py  knowledge_base_factory.py
source/lambda/chat/handlers/: use_case_handler.py
source/lambda/chat/llm_models/: anthropic.py  base_langchain.py  bedrock.py  huggingface.py
source/lambda/chat/llm_models/factories/: bedrock_adapter_factory.py
source/lambda/chat/llm_models/models/: bedrock_ai21_params.py  bedrock_amazon_params.py  bedrock_anthropic_params.py  bedrock_cohere_params.py  bedrock_llm_params.py  bedrock_meta_params.py  bedrock_titan_params.py  llm_params.py
source/lambda/chat/llm_models/rag/: __init__.py  anthropic_retrieval.py  bedrock_retrieval.py  (+1 more)
source/lambda/chat/llms/: anthropic.py  base_langchain.py  bedrock.py  huggingface.py  sagemaker.py
source/lambda/chat/test/: conftest.py
source/lambda/chat/utils/: __init__.py  cognito_jwt_verifier.py  constants.py  custom_exceptions.py  enum_types.py  handler_response_formatter.py  helpers.py
source/lambda/custom-resource/: .coveragerc  .gitignore  cfn_response.py  lambda_func.py  lambda_ops_metrics.py  pyproject.toml  requirements-dev.txt
source/lambda/custom-resource/operations/: admin_policy.py  agentcore_oauth_client.py  agentcore_outbound_permissions.py  anonymous_metrics.py  copy_api_key.py  copy_model_info_to_ddb.py  copy_web_ui.py  customer_policy.py  cw_log_retention.py  deploy_agent_core.py  deploy_agent_core_memory.py  deploy_mcp_gateway.py  deploy_mcp_runtime.py  gen_domain_prefix.py  gen_ecr_repo_prefix.py  gen_uuid.py  get_arns_for_inference_profile.py  get_compatible_azs.py  lambda_version_generator.py  multimodal_bucket_notifications.py  operation_types.py  redeploy_api.py  send_metrics.py  shared.py  sleep.py  update_llm_config.py  update_s3_policy.py  use_case_policy.py  webconfig.py
source/lambda/custom-resource/test/: conftest.py  test_lambda_func.py  test_lambda_ops_metrics.py
source/lambda/custom-resource/utils/: agent_core_utils.py  agentcore_mcp.py  auth_manager.py  constants.py  data.py  gateway_mcp.py  lambda_context_parser.py  lambda_target_creator.py  mcp_config_manager.py  mcp_factory.py  mcp_server_target_creator.py  metrics.py  metrics_payload.py  metrics_schema.py  openapi_target_creator.py  policy_manager.py  runtime_mcp.py  smithy_target_creator.py
source/lambda/invoke-agent/: handler.py  pyproject.toml
source/lambda/invoke-agent/invoker/: bedrock_agent_invoker.py
source/lambda/invoke-agent/utils/: __init__.py  config_retriever.py  constants.py  ddb_history_manager.py  event_processor.py  helper.py  websocket_handler.py
source/lambda/layers/anthropic/: .gitignore  pyproject.toml
source/lambda/layers/aws_boto3/: pyproject.toml  requirements.txt
source/lambda/layers/custom_boto3_init/: .coveragerc  .gitignore  __init__.py  cognito_jwt_verifier.py  custom_config.py  helper.py  pyproject.toml  requirements-dev.txt  setup.py
source/lambda/layers/huggingface_hub/: pyproject.toml
source/lambda/layers/langchain/: pyproject.toml  requirements.txt
source/lambda/reconcile-data/: .coveragerc  lambda_func.py  pyproject.toml  requirements-dev.txt
source/lambda/reconcile-data/exceptions/: operation_not_found.py
source/lambda/reconcile-data/operations/: dynamodb_remove_case.py  operation_types.py
source/lambda/reconcile-data/test/: conftest.py  test_lambda_func.py
source/scripts/v2_migration/: .coveragerc  gaab_v2_migration.py  pyproject.toml  requirements.txt
source/scripts/v2_migration/test/: test_migration.py
(+1750 files in other folders)
