[project]
name = "gaab-strands-common"
version = "4.1.11"
description = "Shared library for GAAB Strands agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "AWS" }]

dependencies = [
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
    "bedrock-agentcore>=0.1.0",
    "strands-agents>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaab_strands_common"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=26.3.1",
    "isort>=5.13.0",
    "moto>=5.1.0",
]
override-dependencies = [
    "pyjwt>=2.12.0",
    "requests>=2.33.0",
    "cryptography>=46.0.7",
    "pygments>=2.20.0"
]
