[tool.poetry]
name = "custom-resource"
version = "3.0.4"
authors = [ "Amazon Web Services" ]
description = "Perform specific operations triggered by AWS CloudFormation events"
packages = [
    { include = "*.py" },
    { include = "./operations/*.py" },
    { include = "./utils/*.py" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.test.dependencies]
freezegun = "1.5.1"
joserfc = "1.0.3"
mock = "5.1.0"
moto = "5.0.28"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
PyYAML = "6.0.2"
setuptools = "80.8.0"
pyjwt = "^2.10.1"
requests="2.32.4"
urllib3="2.5.0"
boto3-layer =  { path = "../layers/aws_boto3/", develop = true }
custom_boto3_init = { path = "../layers/custom_boto3_init", develop = true }

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[build-system]
requires = [ "poetry-core>=1.9.0" ]
build-backend = "poetry.core.masonry.api"