[tool.poetry]
name = "gaab-v2-migration"
version = "1.0.0"
authors = [ "Amazon Web Services" ]
description = "Migration script to convert v1.X use cases to v2.X"
packages = [
    { include = "*.py" },
    { include = "./**/*.py" },
    { include = "./**/**/*.py" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.35.49"

[tool.poetry.group.test.dependencies]
moto = "5.0.18"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-env = "1.1.5"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[build-system]
requires = [ "poetry-core>=1.0.8" ]
build-backend = "poetry.core.masonry.api"