[tool.poetry]
name = "gaab-v2-migration"
version = "3.0.5"
authors = [ "Amazon Web Services" ]
description = "Migration script to convert v1.X use cases to v2.X"
packages = [
    { include = "*.py" },
    { include = "./**/*.py" },
    { include = "./**/**/*.py" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "1.37.22"

[tool.poetry.group.test.dependencies]
moto = "5.0.28"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
requests="2.32.4"
urllib3="2.5.0"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[build-system]
requires = [ "poetry-core>=1.0.8" ]
build-backend = "poetry.core.masonry.api"