[project]
name = "gaab-v2-migration"
version = "4.1.21"
description = "Migration script to convert v1.X use cases to v2.X"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Amazon Web Services" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "boto3==1.37.22",
]

[tool.uv]
dev-dependencies = [
    "moto==5.0.28",
    "cryptography>=48.0.1",
    "pytest==9.0.3",
    "pytest-cov==6.0.0",
    "pytest-env==1.1.5",
    "requests==2.33.0",
    "urllib3>=2.7.0,<2.8.0",
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
