[tool.poetry]
name = "anthropic-layer"
version = "1.3.0"
authors = [ "Amazon Web Services" ]
description = "Layer for Anthropic LLM libraries"
packages = [
    { include = "*.toml" },
    { include = "*.lock" },
]

[tool.poetry.dependencies]
anthropic = "0.8.1"
python = "^3.11"

[build-system]
requires = [ "poetry-core>=1.0.8" ]
build-backend = "poetry.core.masonry.api"