[tool.poetry]
name = "boto3-layer"
version = "3.0.7"
authors = [ "Amazon Web Services" ]
description = "Layer for AWS Boto3 python SDK"
packages = [
    { include = "*.toml" },
    { include = "*.lock" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
botocore = "1.40.15"
boto3 = "1.40.15"
python = "^3.13"
urllib3="2.5.0"

[build-system]
requires = [ "poetry-core>=1.9.0" ]
build-backend = "poetry.core.masonry.api"