[project]
name = "boto3-layer"
version = "4.1.20"
description = "Layer for AWS Boto3 python SDK"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Amazon Web Services" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "botocore>=1.42.24,<2.0.0",
    "boto3>=1.42.24,<2.0.0",
    "urllib3>=2.7.0,<2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
