[tool.poetry]
name = "custom_boto3_init"
version = "2.1.9"
authors = [ "Amazon Web Services" ]
description = "Initialize boto config for AWS Python SDK with custom configuration"
packages = [
    { include = "*.py" },
    { include = "*.toml" },
    { include = "*.lock" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
aws-lambda-powertools = "3.3.0"
aws-xray-sdk = "2.14.0"
python = "^3.12"
pyjwt = "^2.10.1"
cryptography = { version = "^44.0.1", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }

[tool.poetry.group.test.dependencies]
coverage = "7.6.4"
pytest = "8.3.3"
pytest-cov = "5.0.0"
mock = "5.1.0"
boto3-layer =  { path = "../aws_boto3/", develop = true }

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[build-system]
requires = [ "poetry-core>=1.9.0" ]
build-backend = "poetry.core.masonry.api"