[project]
name = "custom-boto3-init"
version = "4.1.19"
description = "Initialize boto config for AWS Python SDK with custom configuration"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Amazon Web Services" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "aws-lambda-powertools==3.19.0",
    "aws-xray-sdk==2.14.0",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.4",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "mock>=5.1.0",
    "urllib3>=2.7.0,<2.8.0",
    "boto3-layer",
]

[tool.uv.sources]
boto3-layer = { path = "../aws_boto3/", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"
