[tool.poetry]
name = "langchain-layer"
version = "3.0.2"
authors = [ "Amazon Web Services" ]
description = "Layer for LangChain libraries"
packages = [
    { include = "*.toml" },
    { include = "*.lock" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "2.2.2"
langchain = "0.3.23"
langchain-core = "0.3.51"
langchain-aws = "0.2.18"
pydantic = "2.11.0"
requests="2.32.4"
urllib3="2.5.0"

[build-system]
requires = [ "poetry-core>=1.9.0" ]
build-backend = "poetry.core.masonry.api"