[project]
name = "langchain-layer"
version = "4.1.20"
description = "Layer for LangChain libraries"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Amazon Web Services" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "numpy==2.2.2",
    "langchain>=1.3.10,<2.0.0",
    "langchain-core>=1.3.3,<2.0.0",
    "langchain-aws==1.2.1",
    "pydantic==2.11.0",
    "requests==2.33.0",
    "urllib3>=2.7.0,<2.8.0",
    "orjson>=3.11.6,<4.0.0",
    "langchain-classic>=1.0.8,<2.0.0",
    "langgraph>=1.0.10,<2.0.0",
    "greenlet<3.3.0",
    "uuid-utils<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
