[tool.poetry]
name = "mock-lambda-function"
version = "1.3.2"
authors = [ "Amazon Web Services" ]
description = "Mock lambda implementation to unit test infrastructure code"
packages = [
    { include = "*.py" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache-2.0",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = [ "poetry-core>=1.0.8" ]
build-backend = "poetry.core.masonry.api"